<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/guideTitleTv"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/arrowleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/connect_device"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#6B7993"
        android:paddingHorizontal="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/btIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/bt"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btIv"
            android:gravity="center_vertical"
            android:text="@string/bt_not_open"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/openIv"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/select"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/openIv"
            android:gravity="center_vertical"
            android:text="@string/bt_open"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/eeg_device_mind2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/connected_device"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/disconnectTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/disconnect"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/disconnect"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/available_device"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/scanImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/sync" />
        </RelativeLayout>

        <ListView
            android:id="@+id/devicesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/device_item"/>

    </LinearLayout>

</LinearLayout>
